kubernetes/cluster/extras/vikunja/vikunja.yaml
# Service: Vikunja
# Ingress: todo.brhd.io
# Label: app.kubernetes.io/name: vikunja
---
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: extras
  labels:
    app.kubernetes.io/name: vikunja
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3456
      targetPort: 3456
      name: http
  selector:
    app.kubernetes.io/name: vikunja
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: extras
  labels:
    app.kubernetes.io/name: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vikunja
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: extras
      labels:
        app.kubernetes.io/name: vikunja
    spec:
      restartPolicy: Always
      containers:
        - name: vikunja
          image: vikunja/vikunja:0.23.0
          resources:
            requests:
              memory: 75M
              cpu: 50m
            limits:
              memory: 150M
              cpu: 100m
          ports:
            - containerPort: 3456
              name: http
          volumeMounts:
            - name: vikunja-data
              mountPath: /app/vikunja/files
      volumes:
        - name: vikunja-data
          persistentVolumeClaim:
            claimName: vikunja-data
