kubernetes/cluster/extras/vikunja/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: extras
  labels:
    app.kubernetes.io/name: vaultwarden
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: vault.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
  tls:
    - hosts:
        - vault.brhd.io
